--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,15 @@
 
+
+.container{
+
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 30px;
+    box-shadow: 10px 5px 15px red;
+    margin: 60px 0;
+    
+
 body{
     background-color: aqua;
 }
@@ -10,5 +21,7 @@ h1{
 
 footer{
 text-align: center;
+font-size: 23px;
+
 
 }
