--- a/src/style.css
+++ b/src/style.css
@@ -7,17 +7,46 @@
     background-color: white;
     padding: 30px;
     box-shadow: 10px 5px 15px red;
+    border-radius: 10px;
     margin: 60px 0;
-    
+}
 
 body{
     background-color: aqua;
 }
 
-h1{
-    font-size: 34px;
-    text-align: center;
+
+select{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    font-size: 10px;
+
 }
+
+.city{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+
+.time{
+    font-size: 36px;
+    font-weight: bold;
+}
+
+
+h1{
+    font-size: 36px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
 
 footer{
 text-align: center;
