--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,13 @@
 
 
+body{
+    background-color: aqua;
+    font-family: sans-serif; 
+}
+
+
+
+
 .container{
 
     max-width: 600px;
@@ -11,9 +19,7 @@
     margin: 60px 0;
 }
 
-body{
-    background-color: aqua;
-}
+
 
 
 select{
@@ -27,14 +33,32 @@ select{
 
 .city{
     display: flex;
+    margin: 20px 0;
     justify-content: space-between;
 
 }
 
+h2{ 
+    margin: 0 0 10px;
+
+}
+
+.date{
+    opacity: 0.7;
+}
 
 .time{
     font-size: 36px;
     font-weight: bold;
+    
+}
+
+
+
+.time small{
+    font-size:  18px;
+    vertical-align: middle;
+    line-height: 37px;
 }
 
 
