--- a/src/style.css
+++ b/src/style.css
@@ -2,23 +2,23 @@
 
 body{
     background-color: aqua;
-    font-family: sans-serif; 
+    font-family: sans-serif;
+}
+
+
+h1{
+    font-size: 36px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 
+h2{ 
+    margin: 0 0 10px;
+    font-size: 28px;
 
-.container{
-
-    max-width: 600px;
-    margin: 0 auto;
-    background-color: white;
-    padding: 30px;
-    box-shadow: 10px 5px 15px red;
-    border-radius: 10px;
-    margin: 60px 0;
 }
-
 
 
 
@@ -31,24 +31,39 @@ select{
 
 }
 
+.container{
+
+    max-width: 600px;
+    margin: 60 0;
+    background: white;
+    padding: 20px;
+    box-shadow: 10px 5px 15px red;
+    border-radius: 10px;
+ 
+}
+
+
 .city{
     display: flex;
-    margin: 20px 0;
+    margin: 10px 0;
     justify-content: space-between;
-
+    padding: 30px 0;
+    border-bottom: 1px dashed rgb(158, 108, 209)
 }
 
-h2{ 
-    margin: 0 0 10px;
 
+.city:last-child{
+
+    border: none;
 }
+
 
 .date{
     opacity: 0.7;
 }
 
 .time{
-    font-size: 36px;
+    font-size: 48px;
     font-weight: bold;
     
 }
@@ -56,25 +71,21 @@ h2{
 
 
 .time small{
-    font-size:  18px;
+    font-size:  24px;
     vertical-align: middle;
-    line-height: 37px;
+    line-height:48px;
 }
 
-
-h1{
-    font-size: 36px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 
 
 
 
 footer{
-text-align: center;
-font-size: 23px;
+text-align: 24px;
+font-size: 18px;
+margin-top: 45px;
+color: rgb(240, 149, 45);
 
 
 }
